# game-of-life

./: CMakeLists.txt  README.md  index.css  index.html  index.js  index.ts
.cache/clangd/index/: main.c.7C638403413DCC71.idx  utils.h.35E2FA37E5C1F65B.idx
src/: frame_buffer.c  frame_buffer.h  input.c  main.c  scene.c  scene.h  simulation.c  simulation.h  utils.h
